--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 
 application {
-    mainClass.set( 'snake.game.SnakeGame')
+    mainClass.set( 'connectFour.game.ConnectFourGame')
 }
 
 
@@ -45,48 +45,17 @@ dependencies {
 
 task zip(type: Zip) {
     group = "prepareZipForSubmit"
-    description = "Zip your code for submission to Codegrade"
+    description = "Zip your code"
 
     // To make sure you can always run this task
     outputs.upToDateWhen { false }
     dependsOn assemble
     dependsOn testClasses
     from fileTree(dir: '.')
-    include 'src/snake/logic/**.scala'
+    include 'src/connectFour/logic/**.scala'
 
-    archiveFileName = 'snake.zip'
+    archiveFileName = 'connectFour.zip'
     destinationDirectory = layout.buildDirectory.dir("$projectDir")
 }
 
-task test2_1(type: Test) {
-    description="Run tests for assignment 2.1 (snake)"
-    filter {
-        includeTestsMatching "snake.SnakeTestsAssignment2_1"
-    }
-}
-
-task test2_3(type: Test) {
-    description="Run tests for assignment 2.3 (snake)"
-    filter {
-        includeTestsMatching "snake.SnakeTestsAssignment2_3"
-    }
-}
-
-task fraction2_1(type: JavaExec, dependsOn: classes) {
-    // To make sure you can always run this task
-    outputs.upToDateWhen { false }
-    mainClass.set('infrastructure.ReportFraction2_1')
-    classpath sourceSets.test.runtimeClasspath
-    classpath sourceSets.main.runtimeClasspath
-    //classpath configurations.runtime
-}
-
-task fraction2_3(type: JavaExec, dependsOn: classes) {
-    // To make sure you can always run this task
-    outputs.upToDateWhen { false }
-    mainClass.set('infrastructure.ReportFraction2_3')
-    classpath sourceSets.test.runtimeClasspath
-    classpath sourceSets.main.runtimeClasspath
-    //classpath configurations.runtime
-}
 
